style.css
body {
  font-family: 'Georgia', serif;
  background: #ddd url("fondo.png") no-repeat center center fixed;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  margin: 0;
  padding: 0;
  color: #333;
  text-align: center;
}

.container::before {
  content: "";
  position: fixed;
  top: 0; left: 10vw; right: 10vw; bottom: 0;
  background: rgba(255, 255, 255, 0.7); /* blanco translúcido */
  z-index: -1;
}

.container {
  max-width: 55vw;
  margin: auto;
  padding: 20px;
  /*min-height: 100vh;*/
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  align-items: center;
  gap: 12px;
}

.top-padding {
  height: 18vh;
}

.center-fade {
  height: 55vh;         /* ventana completa */
  overflow-y: auto;      /* scroll */
  -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 25%, black 75%, transparent 100%);
  mask-image: linear-gradient(to bottom, transparent 0%, black 15%, black 85%, transparent 100%);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
}

/* Filas de imágenes horizontales dentro de .container */
.image-row {
  display: flex;
  gap: 12px;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap; /* permite que se envuelvan en pantallas estrechas */
}
.image-row img {
  max-width: 200px;
  height: auto;
  display: block;
}

.container iframe {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

p {
  font-size: 1.2em;
  line-height: 1.6;
  margin: 10px 0;
}

h1 {
  font-family: "libertinus serif display", serif;
  font-size: 2.2em;
  font-weight: 300; /* negrita */
  margin-bottom: 10px;
  color: #a87c5f;
}

h2 {
  font-size: 1.5em;
  margin: 15px 0;
  color: #555;
}

h3 {
  font-family: "great vibes", cursive;
  font-size: 50px;
  font-weight: 300; /* negrita */
  margin: 15px 0;
  color: #a87c5f;
}

.guest-list {
  list-style: none;
  padding: 0;
}

.guest-list li {
  margin: 10px 0;
}

.guest-list a {
  text-decoration: none;
  font-size: 1.2em;
  color: #a87c5f;
  transition: 0.3s;
}

.guest-list a:hover {
  color: #333;
}

.countdown {
  font-family: "libertinus serif display", serif;
  font-size: 2em;
  margin: 20px 0;
  color: #a87c5f;
}

.btn {
  display: inline-block;
  background: #a87c5f;
  color: white;
  padding: 12px 20px;
  border-radius: 8px;
  text-decoration: none;
  margin-top: 20px;
  transition: 0.3s;
}

.btn:hover {
  background: #333;
}

